--- a/23CLC-Midterm test/23CLC-Midterm test.vcxproj
+++ b/23CLC-Midterm test/23CLC-Midterm test.vcxproj
@@ -126,6 +126,7 @@
     <ClInclude Include="Building.h" />
     <ClInclude Include="City.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Resident.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Building.cpp" />
