--- a/23CLC-Midterm test/23CLC-Midterm test.vcxproj.filters
+++ b/23CLC-Midterm test/23CLC-Midterm test.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="Player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Resident.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
